--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vehicle-data-publish",
-  "version": "1.0.0",
+  "name": "@cazoo/commercetools-types",
+  "version": "1.1.0",
   "scripts": {
     "lint": "yarn eslint '**/*.[jt]s'",
     "lint:fix": "yarn eslint --fix '**/*.[jt]s'",
@@ -9,7 +9,7 @@
   "lint-staged": {
     "*.ts": "yarn eslint"
   },
-  "repository": "git@gitlab.com:cazoo/prodeng/vehicle-data-publish.git",
+  "repository": "git@gitlab.com:cazoo/commercetools-types.git",
   "author": "Theo Breuer-Weil <theo.breuer-weil@theappbusiness.com>",
   "license": "MIT",
   "devDependencies": {
